classDiagram

class AbstractDevice
class AbstractGate
class NAND
class AND
class OR
class Xor2
class HalfAdder
class FullAdder
class FourBitAdder

AbstractDevice <|-- AbstractGate

AbstractGate <|-- NAND
AbstractGate <|-- AND
AbstractGate <|-- OR

AbstractDevice <|-- Xor2
AbstractDevice <|-- HalfAdder
AbstractDevice <|-- FullAdder
AbstractDevice <|-- FourBitAdder

Xor2 *-- NAND : 2
Xor2 *-- AND : 2
Xor2 *-- OR : 1

HalfAdder *-- Xor2 : 1
HalfAdder *-- AND : 1

FullAdder *-- HalfAdder : 2
FullAdder *-- OR : 1

FourBitAdder *-- FullAdder : 4